--- a/project-cards.html
+++ b/project-cards.html
@@ -19,7 +19,7 @@
                         Long Island City, NY 11101</a>
                 </div>
                 <div class="card-action center-align">
-                    <a id="project-status-complete" class="btn green" href="#"></a>
+                    <a id="project-status-active" class="btn orange" href="#"></a>
                 </div>
             </div>
         </div>
@@ -31,7 +31,7 @@
             </div>
             <div class="card-stacked">
                 <div id="card-content" class="card-content center-align">
-                    <p style="font-weight: bold;">Brooklyn High School Of The Arts (PS 656K)</p>
+                    <p style="font-weight: bold;">Brooklyn High School (PS 656K)</p>
                     <p>
                         ITC Job #: <a href="#">B18-410</a><br>
                         LLW #:<br>
@@ -42,7 +42,7 @@
                         Brooklyn, NY 11217</a>
                 </div>
                 <div class="card-action center-align">
-                    <a id="project-status-complete" class="btn green" href="#"></a>
+                    <a id="project-status-active" class="btn orange" href="#"></a>
                 </div>
             </div>
         </div>
@@ -80,19 +80,18 @@
             </div>
             <div class="card-stacked">
                 <div id="card-content" class="card-content center-align">
-                    <p>High School of Graphic Communication Arts</p>
+                    <p style="font-weight: bold;">Brooklyn Technical High School (Prime)</p>
                     <p>
-                        ITC Job #:<br>
+                        ITC Job #: <a href="#">B19-406</a><br>
                         LLW #:<br>
                         Design #:
                     </p>
-                    <p>
-                        439 West 49th Street <br>
-                        New York, NY 10019
-                    </p>
+                    <a href="https://www.google.com/maps?saddr=My+Location&daddr=Brooklyn+Technical+High+School,+29+Fort+Greene+Pl,+Brooklyn,+NY+11217"
+                        target="_blank">29 Fort Greene Place<br>
+                        Brooklyn, NY 11217</a>
                 </div>
                 <div class="card-action center-align">
-                    <a class="btn orange" href="#">Active</a>
+                    <a id="project-status-active" class="btn orange" href="#"></a>
                 </div>
             </div>
         </div>
@@ -108,19 +107,18 @@
             </div>
             <div class="card-stacked">
                 <div id="card-content" class="card-content center-align">
-                    <p>High School of Graphic Communication Arts</p>
+                    <p style="font-weight: bold;">Brooklyn Technical High School (Temp Boiler)</p>
                     <p>
-                        ITC Job #:<br>
+                        ITC Job #: <a href="#">B17-418</a><br>
                         LLW #:<br>
                         Design #:
                     </p>
-                    <p>
-                        439 West 49th Street <br>
-                        New York, NY 10019
-                    </p>
+                    <a href="https://www.google.com/maps?saddr=My+Location&daddr=Brooklyn+Technical+High+School,+29+Fort+Greene+Pl,+Brooklyn,+NY+11217"
+                        target="_blank">29 Fort Greene Place<br>
+                        Brooklyn, NY 11217</a>
                 </div>
                 <div class="card-action center-align">
-                    <a class="btn orange" href="#">Active</a>
+                    <a id="project-status-active" class="btn orange" href="#"></a>
                 </div>
             </div>
         </div>
@@ -132,19 +130,18 @@
             </div>
             <div class="card-stacked">
                 <div id="card-content" class="card-content center-align">
-                    <p>High School of Graphic Communication Arts</p>
+                    <p style="font-weight: bold;">High School of Graphic Communication Arts</p>
                     <p>
-                        ITC Job #:<br>
+                        ITC Job #: <a href="#">B15-436</a><br>
                         LLW #:<br>
                         Design #:
                     </p>
-                    <p>
-                        439 West 49th Street <br>
-                        New York, NY 10019
-                    </p>
+                    <a href="https://www.google.com/maps?saddr=My+Location&daddr=High+School-Graphic+Arts+Comm,+439+W+49th+St,+New+York,+NY+10019"
+                        target="_blank">439 West 49th Street<br>
+                        New York, NY 10019</a>
                 </div>
                 <div class="card-action center-align">
-                    <a class="btn orange" href="#">Active</a>
+                    <a id="project-status-complete" class="btn green" href="#"></a>
                 </div>
             </div>
         </div>
@@ -160,19 +157,18 @@
             </div>
             <div class="card-stacked">
                 <div id="card-content" class="card-content center-align">
-                    <p>High School of Graphic Communication Arts</p>
+                    <p style="font-weight: bold;">IS 259K</p>
                     <p>
-                        ITC Job #:<br>
+                        ITC Job #: <a href="#">B17-416</a><br>
                         LLW #:<br>
                         Design #:
                     </p>
-                    <p>
-                        439 West 49th Street <br>
-                        New York, NY 10019
-                    </p>
+                    <a href="https://www.google.com/maps?saddr=My+Location&daddr=William+McKinley+I.S.+259,+Brooklyn,+NY+11228"
+                        target="_blank">7305 Fort Hamilton Parkway<br>
+                        Brooklyn, NY 11228</a>
                 </div>
                 <div class="card-action center-align">
-                    <a class="btn orange" href="#">Active</a>
+                    <a id="project-status-active" class="btn orange" href="#"></a>
                 </div>
             </div>
         </div>
@@ -184,19 +180,18 @@
             </div>
             <div class="card-stacked">
                 <div id="card-content" class="card-content center-align">
-                    <p>High School of Graphic Communication Arts</p>
+                    <p style="font-weight: bold;">IS 611K</p>
                     <p>
-                        ITC Job #:<br>
+                        ITC Job #: <a href="#">B15-417</a><br>
                         LLW #:<br>
                         Design #:
                     </p>
-                    <p>
-                        439 West 49th Street <br>
-                        New York, NY 10019
-                    </p>
+                    <a href="https://www.google.com/maps?saddr=My+Location&daddr=Origins+High+School,+3000+Avenue+X,+Brooklyn,+NY+11235"
+                        target="_blank">3000 Avenue X<br>
+                        Brooklyn, NY 11235</a>
                 </div>
                 <div class="card-action center-align">
-                    <a class="btn orange" href="#">Active</a>
+                    <a id="project-status-complete" class="btn green" href="#"></a>
                 </div>
             </div>
         </div>
