--- a/project-cards.html
+++ b/project-cards.html
@@ -19,7 +19,7 @@
                         Long Island City, NY 11101</a>
                 </div>
                 <div class="card-action center-align">
-                    <a id="project-status-active" class="btn orange" href="#"></a>
+                    <a id="project-status-active" class="btn orange" href="/projects/B18-411/B18411.html"></a>
                 </div>
             </div>
         </div>
