--- a/projects/B18-411/B18411.html
+++ b/projects/B18-411/B18411.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../css/style.css">
     <title>ITC | DMS</title>
 </head>
 
@@ -16,26 +16,34 @@
     <!-- Begin Navbar-->
     <div class="header">
         <nav class="grey">
-            <div class="container">
-                <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-                <!-- navbar content here  -->
-                  </div>
-            </div>
+            <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+            <!-- navbar content here  -->
         </nav>
     </div>
     <!-- End Navbar-->
     <!-- Begin Sidenav-->
     <ul id="slide-out" class="sidenav sidenav-fixed">
         <li>
-            <h2 class="center-align">ITC | DMS</h2>
+            <h2 class="center-align"><a class="black-text" href="../../index.html">ITC | DMS</a></h2>
         </li>
-        <li><a href="#!">First Link</a></li>
-        <li><a href="#!">Second Link</a></li>
+        <li>
+            <div class="user-view center-align">
+                <a href="#user"><img id="user-img" class="circle" src="../../img/user-icon.png"></a>
+                <a href="#name"><span class="black-text name">John Doe</span></a>
+                <a href="#email"><span class="black-text email">someone@gmail.com</span></a>
+            </div>
+        </li>
         <li>
             <div class="divider"></div>
         </li>
-        <li><a class="subheader">Subheader</a></li>
-        <li><a class="waves-effect" href="108-submittal-input.html">Upload Form</a></li>
+        <li><a class="waves-effect" href="#">Home</a></li>
+        <li><a class="waves-effect" href="#">Submittals</a></li>
+        <li><a class="waves-effect" href="#">Transmittals</a></li>
+        <li><a class="waves-effect" href="#">Drawings</a></li>
+        <li><a class="waves-effect" href="#">Specifications</a></li>
+        <li><a class="waves-effect" href="#">Schedule</a></li>
+        <li><a class="waves-effect" href="#">RFI's</a></li>
+        <li><a class="waves-effect" href="#">Photos</a></li>
     </ul>
     <!-- End Sidenav -->
     <div id="main" class="main">
@@ -52,7 +60,7 @@
         M.AutoInit();
         // Ajax load main content into page
         $(document).ready(function () {
-            $("#main").load("project-cards.html");
+            $("#main").load("B18411-project-management.html");
         });
     </script>
     <!-- End Load Document Scripts -->
