--- a/projects/B18-411/B18411-submittals.html
+++ b/projects/B18-411/B18411-submittals.html
@@ -9,6 +9,7 @@
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="../../css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.css">
     <title>ITC | DMS</title>
 </head>
 
@@ -47,6 +48,41 @@
     </ul>
     <!-- End Sidenav -->
     <div id="main" class="main">
+        <div class="row">
+            <div class="col s12 m12 l10 push-l1 center-align">
+                <h5>Academy of American Studies</h5>
+                <h6>
+                    <a href="https://www.google.com/maps?saddr=My+Location&daddr=Academy+of+American+Studies,+28-04+41st+Ave,+Long+Island+City,+NY+11101"
+                        target="_blank">28-04 41st Avenue<br>
+                        Long Island City, NY 11101</a>
+                </h6>
+            </div>
+        </div>
+        <div class="row">
+            <div class="container">
+                <div class="divider"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col s12 m12 l10 push-l1">
+                <table id="submittal-table" class="striped">
+                    <thead>
+                        <tr>
+                            <th>Date Uploaded</th>
+                            <th>Spec Section</th>
+                            <th>Revision Number</th>
+                            <th>Vendor / Subcontractor</th>
+                            <th>Date Submitted</th>
+                            <th>Date Returned</th>
+                            <th>Approval Status</th>
+                            <th>Link to Submittal Files</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+            </div>
+        </div>
 
     </div>
     <div class="fixed-action-btn horizontal click-to-toggle tooltipped" data-position="left"
@@ -62,28 +98,69 @@
     <!-- Load Font Awesome -->
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
     <!-- End Load Materialize Scripts, Font Awesome and jQuery-->
+    <!-- DataTable plugin -->
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.js">
+    </script>
     <!-- Load Document Scripts -->
     <script>
         M.AutoInit();
         // Ajax load main content into page
         $(document).ready(function () {
-            $("#main").load("B18411-submittal-table.html");
-            $('select').formSelect();
+            $('table').dataTable({
+                "bServerSide": false,
+                "bProcessing": true,
+                "sAjaxDataProp": "feed.entry",
+                "sAjaxSource": "https://spreadsheets.google.com/feeds/list/18rnRrTB8W1N4UwIPq55zU1ziZU7sZmu0t7p0cS-Nkd0/od6/public/values?alt=json",
+                "aoColumns": [{
+                        "mDataProp": "gsx$timestamp.$t"
+                    },
+                    {
+                        "mDataProp": "gsx$specsec.$t"
+                    },
+                    {
+                        "mDataProp": "gsx$revnum.$t"
+                    },
+                    {
+                        "mDataProp": "gsx$vendsub.$t"
+                    },
+                    {
+                        "mDataProp": "gsx$datesub.$t"
+                    },
+                    {
+                        "mDataProp": "gsx$dateret.$t"
+                    },
+                    {
+                        "mDataProp": "gsx$approvalstatus.$t"
+                    },
+                    {
+                        "mDataProp": "gsx$attachment.$t",
+                        "render": function (mDataProp, type, row, meta) {
+                            if (type === 'display') {
+                                var links = mDataProp;
+                                var linksArray = links.split(',');
+                                let x = 1;
+
+                                for (var i = 0; i < linksArray.length; i++) {
+                                    // Trim the excess whitespace.
+                                    linksArray[i] = ' <a target="_blank" href="' + linksArray[i].replace(/^\s*/, "").replace(
+                                        /\s*$/, "")+'">File '+ x++ +'</a>';
+                                    mDataProp = linksArray;
+                                }
+                                
+                            }
+                            return mDataProp;
+                        }
+                    },
+                ]
+            });
         });
 
-        function submittalForm (){
+
+
+
+        function submittalForm() {
             window.location.href = 'B18411-submittal-form.html';
         };
-    </script>
-    <script>
-        (function () {
-            var frame = $('iframe'),
-                contents = frame.contents(),
-                styleTag = contents.find('head').append('<style></style>').children('style');
-
-            styleTag.text(".st-bg {border-left: none;} .st-dtitle {border: none; background: white;}")
-
-        })();
     </script>
     <!-- End Load Document Scripts -->
 </body>
