--- a/projects/B18-411/B18411-submittals.html
+++ b/projects/B18-411/B18411-submittals.html
@@ -106,7 +106,7 @@
     <script src="https://cdn.datatables.net/buttons/1.6.2/js/dataTables.buttons.min.js"></script>
     <script src="https://cdn.datatables.net/buttons/1.6.2/js/buttons.html5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
-    <script src="https://cdn.datatables.net/plug-ins/1.10.21/sorting/datetime-moment.js"></script>
+    
     <!-- Load Document Scripts -->
     <script>
         M.AutoInit();
@@ -115,6 +115,7 @@
         $(document).ready(function () {
 
             $('table').dataTable({
+                responsive: !0,
                 dom: 'Bfrtip',
                 buttons: [
                     'excelHtml5',
@@ -176,7 +177,7 @@
                         '<span><i class="fas fa-file-csv" id="button-text"></i> csv</span>'
                     );
                     $('.dt-buttons').appendTo($('#tbl-btn-bar'));
-                   // $('.dataTables_filter').appendTo($('#tbl-srch-bar'));
+                    // $('.dataTables_filter').appendTo($('#tbl-srch-bar'));
                     $('#submittal-table_previous').html(
                         '<i class="material-icons" id="button-text">navigate_before</i>')
                     $('#submittal-table_next').html(
