Reworking project management page.

--- a/projects/B18-411/B18411-submittal-cover.html
+++ b/projects/B18-411/B18411-submittal-cover.html
@@ -66,7 +66,8 @@
             <div class="container">
                 <div class="col s12 m12 l10 push-l1">
                     <form class="submittal-cover-form col s12 m12 l12 itc-blue" id="submittal-cover-form"
-                        name="submittal-cover-form" method="POST" action="https://script.google.com/macros/s/AKfycbxoPoYCI6-p926jA6j3ZWX3UD1g4D8P4yHsVILmsJSu7m5tkIg/exec">
+                        name="submittal-cover-form" method="POST"
+                        action="https://script.google.com/macros/s/AKfycbxoPoYCI6-p926jA6j3ZWX3UD1g4D8P4yHsVILmsJSu7m5tkIg/exec">
                         <div class="row">
                             <div class="row">
                                 <div class="input-field col s6">
@@ -295,6 +296,9 @@
             </div>
         </div>
     </div>
+    <script type="text/javascript">
+        window.mdc.autoInit();
+    </script>
     <script src="cover-sheet.js"></script>
     <!-- Load Materialize Scripts, Font Awesome and jQuery-->
     <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
