--- a/projects/B18-411/B18411.html
+++ b/projects/B18-411/B18411.html
@@ -68,8 +68,11 @@
             <div class="row valign-wrapper">
                 <div class="col s12 m12 l8 ">
                     <div class="card-panel">
-                        <h6 class="teal-text text-lighten-2">Job Contacts</h6>
-                        <table>
+                        <h6>Job Contacts</h6>
+                        <div class="row">
+                        <div class="divider"></div>
+                    </div>
+                        <table class="striped">
                             <thead>
                                 <tr>
                                     <th>Role</th>
@@ -102,9 +105,12 @@
                         </table>
                     </div>
                 </div>
-                <div class="col s12 m12 l4 ">
+                <div class="col s12 m12 l4">
                     <div class="card-panel">
-                        <h6 class="teal-text text-lighten-2">Job Weather</h6>
+                        <h6>Job Weather</h6>
+                        <div class="row">
+                            <div class="divider"></div>
+                        </div>
                         <a class="weatherwidget-io" href="https://forecast7.com/en/40d74n73d94/11101/?unit=us"
                             data-label_1="ACADEMY OF AMERICAN STUDIES" data-label_2="WEATHER" data-font="Roboto"
                             data-icons="Climacons Animated" data-theme="pure">ACADEMY OF AMERICAN STUDIES WEATHER</a>
@@ -114,9 +120,12 @@
         </section>
         <section id="schedule-calendar">
             <div class="row">
-                <div class="col s12 m12 l6  center-align">
+                <div class="col s12 m12 l6">
                     <div class="card-panel">
-                        
+                        <h6>Upcomping Events</h6>
+                        <div class="row">
+                            <div class="divider"></div>
+                        </div>
                         <div id='loading'>loading...</div>
                         <div id='calendar'></div>
                     </div>
